# oz_account_book

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.dev.yml  main.py  manage.py  pyproject.toml  requirements.txt
.github/workflows/: checks.yml
accounts/: models.py  permissions.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_initial.py
accounts/tests/: test_views.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  dev.py  prod.py
scripts/: run.sh
users/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_date_joined.py
users/tests/: __init__.py  test_registration_jwt.py  test_registration_serializer.py
